# 5AI-labs-chess-project-main

./: .gitignore  Progress.txt  README.md  fiveaichess.bat  fiveaichessMinimaxAgent.bat  pyproject.toml
fiveaichess/agents/: agent.py  example_agent.py  minimax_agent.py
fiveaichess/engines/: example_engine.py  our_engine.py  uci_engine.py
fiveaichess/utilities/: checking.py  combined_utility.py  example_utility.py  king_safety_utility.py  material_utility.py  mobility_utility.py  pawnpush.py  utility.py
scripts/: play_engine.py  play_self.py  replay_pgn.py
